[tool.poetry]
name = "computer-graphics-tests"
version = "0.1.0"
description = "Implementação e estudos de algoritmos de computação gráfica com Python"
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.3.7"
isort = "^5.13.2"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.isort]
profile = "black"
line_length = 90

[tool.coverage.run]
branch = true
omit = ["**/*test*.py"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"
python_files = "test.py tests.py test_*.py tests_*.py *_test.py *_tests.py"

[tool.taskipy.tasks]
lint = "ruff check . && black --check -S . --diff && isort --check --diff ."
format = "black . -S  && isort ."
